This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: Parser module fails to validate class decorators correctly.
Type: behavior Stage: resolved
Components: Extension Modules Versions: Python 3.1, Python 3.2
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: mark.dickinson Nosy List: mark.dickinson
Priority: normal Keywords: patch

Created on 2010-06-30 18:11 by mark.dickinson, last changed 2022-04-11 14:57 by admin. This issue is now closed.

Files
File name Uploaded Description Edit
parser_class_decorator.patch mark.dickinson, 2010-06-30 18:11
Messages (3)
msg109002 - (view) Author: Mark Dickinson (mark.dickinson) * (Python committer) Date: 2010-06-30 18:11
Python 2.7rc2+ (trunk:82399M, Jun 30 2010, 17:10:13) 
[GCC 4.2.1 (Apple Inc. build 5659)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> import parser
[35303 refs]
>>> parser.sequence2st(parser.suite("@deco\nclass A(): pass").totuple())
<parser.st object at 0x10045d310>
XXX undetected error
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
parser.ParserError: Expected node type 262, got 330.
[35347 refs]

Patch attached.
msg109233 - (view) Author: Mark Dickinson (mark.dickinson) * (Python committer) Date: 2010-07-04 16:30
Fixed in r82532 (release27-maint) and r82534 (release26-maint).
msg109236 - (view) Author: Mark Dickinson (mark.dickinson) * (Python committer) Date: 2010-07-04 16:40
and in r82537 (py3k), r82539 (release31-maint).
History
Date User Action Args
2022-04-11 14:57:03adminsetgithub: 53374
2010-07-04 16:40:53mark.dickinsonsetstatus: open -> closed
resolution: fixed
messages: + msg109236

stage: resolved
2010-07-04 16:30:44mark.dickinsonsetmessages: + msg109233
versions: - Python 2.6, Python 2.7
2010-07-04 16:20:43mark.dickinsonsetassignee: mark.dickinson
2010-06-30 18:11:40mark.dickinsoncreate