Issue #9128: Fix validation of class decorators in parser module.